Working on displaying the simulation, testing BasicPlantManagers, saving and loading simulation from JSON added