@@ -8,33 +8,48 @@ import Interfaces.WorldElement;
 import Interfaces.WorldMap;
 import java.util.*;
 
-abstract public class AbstractMapClass implements WorldMap {
+abstract public class AbstractMap implements WorldMap {
     protected Boundary currentBounds;
     protected PlantsManager plantsManager;
-    protected Map<Vector2d, List<Animal>> animals;
-    protected Map<Vector2d, Plant> plants;
+    protected Map<Vector2d, ArrayList<Animal>> animals;
     protected List<MapChangeListener> listeners;
     private int daysCount;
+
+    @Override
+    public void setBoundary(Boundary givenBoundary)
+    {
+        currentBounds = givenBoundary;
+    }
 
     @Override
     public List<Animal> getAnimalsAtPosition(Vector2d position)
     {
         return animals.get(position);
     }
-
-    public AbstractMapClass() {
-        this.plants = new HashMap<>();
+    private final List<MapChangeListener> subscribers;
+    public List<MapChangeListener> getSubscribers()
+    {
+        return subscribers;
+    }
+    public void registerListener(MapChangeListener listener)
+    {
+        subscribers.add(listener);
+    }
+    public AbstractMap() {
+        currentBounds = new Boundary(new Vector2d(0,0), new Vector2d(10,10));
+        plantsManager = new CreepingJunglePlantsManager(currentBounds);
         this.animals = new HashMap<>();
         this.listeners = new ArrayList<>();
         this.daysCount = 0;
+        this.subscribers = new ArrayList<>();
     }
 
-    public AbstractMapClass(Boundary boundary) {
+    public AbstractMap(Boundary boundary) {
         this();
         this.currentBounds = boundary;
     }
 
-    public AbstractMapClass(Boundary boundary, List<Animal> newAnimals) {
+    public AbstractMap(Boundary boundary, List<Animal> newAnimals) {
         this(boundary);
         addAnimals(newAnimals);
     }
@@ -59,18 +74,35 @@ abstract public class AbstractMapClass implements WorldMap {
         this.currentBounds = boundary;
     }
 
-    @Override
-    public void place(Animal animal) {
-        animals.computeIfAbsent(animal.getPosition(), k -> new ArrayList<>()).add(animal);
+    protected void placeAnimal(Animal animal)
+    {
+        if(animal != null)
+        {
+            if(!animals.containsKey(animal.getPosition()))
+            {
+                animals.put(animal.getPosition(), new ArrayList<>());
+            }
+            animals.get(animal.getPosition()).add(animal);
+        }
     }
 
-    public void placePlant(Plant plant, Vector2d position) {
-        plants.putIfAbsent(position, plant);
+    protected void removeAnimal(Animal animal)
+    {
+        if(animal != null)
+        {
+            animals.get(animal.getPosition()).remove(animal);
+            if(animals.get(animal.getPosition()).isEmpty())
+            {
+                animals.remove(animal.getPosition());
+            }
+        }
     }
 
     @Override
     public void move(Animal animal) {
+        removeAnimal(animal);
         animal.moveNext(currentBounds);
+        placeAnimal(animal);
     }
 
     public void deleteCorpses() {
@@ -91,24 +123,29 @@ abstract public class AbstractMapClass implements WorldMap {
     public void feedAll() {
         for (Vector2d position : animals.keySet()) {
             List<Animal> animalList = animals.get(position);
-            if (animalList != null && !animalList.isEmpty()) {
+            if (animalList != null && !animalList.isEmpty() && plantsManager.plantAt(position) != null) {
                 orderAnimals(animalList);
-                Animal strongest = animalList.get(0);
-                strongest.eat(plants.get(position));
-                plants.remove(position);
+                Animal strongest = animalList.getFirst();
+                strongest.eat(plantsManager.plantAt(position));
+                plantsManager.removePlant(position);
             }
         }
     }
 
+
     public void mateAll() {
         for (Vector2d position : animals.keySet()) {
-            List<Animal> animalList = animals.get(position);
+            ArrayList<Animal> animalList = animals.get(position);
             if (animalList != null && animalList.size() > 1) {
                 orderAnimals(animalList);
-                Animal parent1 = animalList.get(0);
-                Animal parent2 = animalList.get(1);
-                Animal child = parent1.mate(parent2);
-                animals.computeIfAbsent(position, k -> new ArrayList<>()).add(child);
+                for(int i = 0;i < animalList.size()-1;i++) {
+                        Animal parent1 = animalList.get(i);
+                        Animal parent2 = animalList.get(i + 1);
+                    if(parent1.canMate() && parent2.canMate()) {
+                        Animal child = parent1.mate(parent2);
+                        placeAnimal(child);
+                    }
+                }
             }
         }
     }
@@ -130,7 +167,7 @@ abstract public class AbstractMapClass implements WorldMap {
 
     public void mapChanged(String change) {
         for (MapChangeListener listener : listeners) {
-            listener.update(change);
+            listener.mapChanged(change);
         }
     }
     @Override
@@ -143,5 +180,11 @@ abstract public class AbstractMapClass implements WorldMap {
 
         return combined;
     }
+    @Override
+    public Plant plantAt(Vector2d position)
+    {
+        return plantsManager.plantAt(position);
+    }
+
 }
 
